fixed overflow

--- a/wp-content/themes/vertica/css/nanogallery/themes/light/nanogallery_light.css
+++ b/wp-content/themes/vertica/css/nanogallery/themes/light/nanogallery_light.css
@@ -13,7 +13,7 @@
 	-webkit-box-sizing: content-box;
 	-moz-box-sizing: content-box;
 	-o-box-sizing: content-box;
-	overflow: hidden;
+	/*overflow: hidden;*/
   visibility: visible;
   -webkit-user-select: none;
   -webkit-touch-callout: none;
